--- a/css/base.css
+++ b/css/base.css
@@ -1,18 +1,16 @@
-/* Брендбук: Основні кольори, шрифти [cite: 127, 128, 131, 132, 133, 134] */
-:root {
-    --primary-color: #102E16; /* Екстер */
-    --secondary-color: #DAE2CB; /* Квітковий Бор */
-    --accent-color: #88744B; /* Тінь (для кнопок/посилань) */
-    --text-color: #525647; /* Фускусово-сірий */
-    --light-text-color: #C6D6B1; /* Долина Кукурудзи */
 
-    /* Шрифти */
+:root {
+    --primary-color: #102E16; 
+    --secondary-color: #DAE2CB;
+    --accent-color: #88744B; 
+    --text-color: #525647;
+    --light-text-color: #C6D6B1;
+
     --font-main: 'Lato', sans-serif;
     --font-heading: 'Playfair Display', serif;
     --font-accent: 'Italianno', cursive; 
 }
 
-/* Скидання базових стилів */
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +24,6 @@ body {
     line-height: 1.6;
 }
 
-/* Стилізація типографіки [cite: 44] */
 h1, h2, h3 {
     font-family: var(--font-heading);
     color: var(--primary-color);
@@ -41,7 +38,7 @@ p {
     margin-bottom: 1em;
 }
 
-/* Стилізація посилань */
+/* посилання */
 a {
     color: var(--accent-color);
     text-decoration: none;
